## Copyright (C) 2016 M. Marques
##
## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at http://mozilla.org/MPL/2.0/.
##

SUBDIRS = lda_exc lda_vxc gga_exc mgga_exc

noinst_HEADERS = \
  hyb_mgga_xc_wb97mv.c hyb_mgga_x_dldf.c		\
  hyb_mgga_x_m05.c mgga_c_b88.c mgga_c_bc95.c 		\
  mgga_c_kcis.c mgga_xc_lp90.c mgga_c_m06l.c		\
  mgga_c_m08.c mgga_c_pkzb.c mgga_c_revtpss.c mgga_c_scan.c		\
  mgga_c_tpss.c mgga_c_tpssloc.c mgga_c_vsxc.c mgga_k_pc07.c		\
  mgga_xc_b97mv.c mgga_xc_cc06.c mgga_xc_zlp.c mgga_x_gvt4.c		\
  mgga_x_gx.c mgga_x_m06l.c mgga_x_m08.c mgga_x_m11.c	\
  mgga_x_m11_l.c mgga_x_mbeef.c mgga_x_mbeefvdw.c mgga_x_mk00.c		\
  mgga_x_mn12.c mgga_x_ms.c mgga_x_mvs.c mgga_x_pbe_gx.c		\
  mgga_x_pkzb.c mgga_x_tau_hcth.c	\
  mgga_c_revscan.c		\
  mgga_x_br89_explicit.c mgga_xc_b98.c mgga_x_rtpss.c      \
  mgga_x_msb.c mgga_x_mvsb.c
