## Copyright (C) 2016 M. Marques
##
## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at http://mozilla.org/MPL/2.0/.
##

SUBDIRS = lda_exc lda_vxc gga_exc mgga_exc

noinst_HEADERS = \
  hyb_mgga_x_dldf.c		\
  hyb_mgga_x_m05.c 	\
  mgga_c_m06l.c mgga_c_m08.c		\
  mgga_c_revtpss.c		\
  mgga_c_tpssloc.c 		
