## Copyright (C) 2016 M. Marques
##
## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at http://mozilla.org/MPL/2.0/.
##

noinst_HEADERS = gga_c_wi.c gga_c_am05.c gga_c_bcgp.c gga_c_bmk.c   \
  gga_c_pw91.c gga_c_pbe.c gga_x_wc.c gga_x_g96.c gga_c_cs1.c       \
  gga_c_gapc.c gga_c_gaploc.c gga_c_hcth_a.c gga_c_lm.c gga_c_lyp.c \
  gga_c_ft97.c gga_c_p86.c gga_c_pbeloc.c gga_c_tca.c gga_c_wl.c    \
  gga_c_zpbeint.c gga_c_zvpbeint.c gga_c_scan_e0.c gga_c_sg4.c      \
  gga_c_sogga11.c gga_c_w94.c gga_c_optc.c gga_c_revtca.c           \
  gga_c_q2d.c gga_x_hjs.c gga_x_kt.c gga_x_n12.c hyb_gga_xc_wb97.c  \
  gga_xc_b97.c gga_xc_th1.c gga_xc_th2.c gga_xc_th3.c
