## Copyright (C) 2016 M. Marques
##
## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at http://mozilla.org/MPL/2.0/.
##

noinst_HEADERS = lda_x.c lda_x_rel.c lda_x_erf.c \
  lda_c_1d_csc.c lda_c_1d_loos.c lda_c_2d_amgb.c lda_c_2d_prm.c \
  lda_c_chachiyo.c
