## Copyright (C) 2016 M. Marques
##
## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at http://mozilla.org/MPL/2.0/.
##

noinst_HEADERS = \
mgga_c_cs.c    mgga_x_sa_tpss.c   mgga_x_tm.c    \
mgga_c_m05.c   mgga_x_scan.c      mgga_x_tpss.c  \
mgga_x_lta.c   mgga_x_tau_hcth.c  mgga_x_vt84.c  \
mgga_x_rtpss.c mgga_x_pkzb.c      mgga_x_gx.c    \
mgga_x_pbe_gx.c mgga_x_mvs.c mgga_x_ms.c \
mgga_x_mvsb.c mgga_x_msb.c mgga_x_mk00.c \
mgga_x_mbeef.c mgga_x_mbeefvdw.c

